    slightly more secure.
  - Removed callback support from body method in Mojo::Message.
  - Removed Mojolicious::Plugin::PoweredBy and
    Mojolicious::Plugin::RequestTimer.
  - Removed data attribute from Mojo::URL.
  - Removed is_chunked, is_dynamic, is_multipart, has_leftovers, leftovers,
    write and write_chunk methods from Mojo::Message.
  - Removed deprecated end method from Mojo::IOLoop::Delay.
  - Removed deprecated build_form_tx, build_json_tx, post_form and post_json
    methods from Mojo::UserAgent.
  - Removed deprecated form and json methods from Mojo::UserAgent::Transactor.
  - Removed deprecated post_form_ok and post_json_ok methods from Test::Mojo.
  - Removed deprecated f and n functions from ojo.
  - Removed deprecated after_static_dispatch hook.
  - Renamed shape_match method in Mojolicious::Routes::Pattern to
    match_partial.
  - Reduced idle CPU usage of Mojo::IOLoop.
  - Increased default lock_timeout from 0.5 to 1 second in
    Mojo::Server::Prefork and Mojo::Server::Hypnotoad.
  - Improved Mojo::IOLoop performance significantly and reduced CPU usage when
    managing more than 10k concurrent connections.
  - Improved Mojolicious to be able to detect the current operating mode from
    the PLACK_ENV environment variable.
  - Improved renderer performance.
  - Improved Mojo::DOM::HTML performance.
  - Improved Mojo::Reactor::Poll performance.
  - Improved html_unescape performance in Mojo::Util.
  - Improved Mojolicious::Plugin::EPLRenderer to cache templates more
    efficiently.
  - Improved documentation.
  - Improved tests.
  - Fixed Perl 5.17.11+ compatibility.
  - Fixed a few authority bugs in Mojo::URL.
  - Fixed layout bugs in Mojolicious::Renderer.
  - Fixed support for HEAD request method in Mojo::Server::CGI and
    Mojo::Server::PSGI.

3.97  2013-04-25
  - Added data attribute to Mojo::URL.
  - Improved compatibility with IO::Socket::SSL 1.87.
  - Improved Test::Mojo diagnostics messages.
  - Improved documentation.