@@ -74,10 +74,6 @@ is unpack('H*', b('foo bar baz')->sha1_bytes),
 is b('foo bar baz')->sha1_sum, 'c7567e8b39e2428e38bf9c9226ac68de4c67dc39',
   'right sha1 checksum';
 
-# hmac_md5_sum
-is b('Hi there')->hmac_md5_sum(1234567890),
-  'e3b5fab1b3f5b9d1fe391d09fce7b2ae', 'right hmac md5 checksum';
-
 # hmac_sha1_sum
 is b('Hi there')->hmac_sha1_sum(1234567890),
   '4fd7160f392dc54308608cae6587e137c62c2e39', 'right hmac sha1 checksum';
